Add docker-compose and update docs

--- a/sftp-downloader/src/main/resources/application.yml
+++ b/sftp-downloader/src/main/resources/application.yml
@@ -8,7 +8,7 @@ sftp:
   local-dir: ./download
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/sftpdb
+    url: jdbc:postgresql://localhost:5432/sftpdb  # overridden in docker-compose
     username: sftpuser
     password: sftppass
     driver-class-name: org.postgresql.Driver
