Configure local path and clarify docker volume

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SFTP_PORT=22
 SFTP_USERNAME=ftpuser
 SFTP_PASSWORD=lolik228
 SFTP_REMOTE_DIR=/
-SFTP_LOCAL_DIR=/app/download
+SFTP_LOCAL_DIR=D:/app/Sends
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/sftpdb
 SPRING_DATASOURCE_USERNAME=sftpuser
 SPRING_DATASOURCE_PASSWORD=sftppass
