document host storage path

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ SFTP_PORT=22
 SFTP_USER=user
 SFTP_PASS=pass
 SFTP_DIR=/remote/path
+
+# Local storage configuration
+# Path on the host machine where downloaded files will be stored.
+LOCAL_DIR=./downloads
+# CSV log file path
+CSV_PATH=./downloads/download_log.csv
+HOST_STORAGE=./downloads
