Improve environment example and docs

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,9 @@ SFTP_PASS=pass
 SFTP_DIR=/remote/path
 
 # Local storage configuration
-# Path on the host machine where downloaded files will be stored.
-LOCAL_DIR=./downloads
-# CSV log file path
-CSV_PATH=./downloads/download_log.csv
+# Internal container directory for downloads
+LOCAL_DIR=/data
+# CSV log file path inside the container
+CSV_PATH=/data/download_log.csv
+# Path on the host machine where downloaded files will be stored
 HOST_STORAGE=./downloads
